Fixed survey photo height on tablet, desktop

--- a/css/styles.css
+++ b/css/styles.css
@@ -245,6 +245,7 @@ form textarea:focus {
 
   .photo{
     width: 30%;
+    height: initial;
     margin: 20px 30px;
   }
 
